# ion-dao-contracts

./: .gitignore  Beaker.toml  Cargo.toml  README.md  proposal.yaml
artifacts/: checksums.txt  checksums_intermediate.txt  ion_dao.wasm  ion_stake.wasm
contracts/cw3-dao/: Cargo.toml
contracts/cw3-dao/examples/: schema.rs
contracts/cw3-dao/schema/: balances_response.json  config_response.json  instantiate_msg.json
contracts/cw3-dao/src/: contract.rs  helpers.rs  query.rs  state.rs  tests.rs
contracts/dao/: Cargo.toml
contracts/dao/examples/: schema.rs
contracts/dao/schema/: ballot.json  block_time.json  config.json  config_response.json  deposit_response.json  deposits_response.json  execute_msg.json  init_msg.json  proposal.json  proposal_response.json  proposals_response.json  query_msg.json  range_order.json  threshold.json  token_balances_response.json  token_list_response.json  votes.json  votes_response.json
contracts/dao/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  proposal.rs  query.rs  state.rs  threshold.rs
contracts/dao/src/tests/: bump.rs  execute.rs  instantiate.rs  lifecycle.rs  mod.rs  proposal.rs  query.rs  suite.rs
contracts/stake/: Cargo.toml
contracts/stake/examples/: schema.rs
contracts/stake/schema/: execute_msg.json  get_config_response.json  instantiate_msg.json
contracts/stake/src/: contract.rs  lib.rs  msg.rs  state.rs  tests.rs
deployer/: .gitignore  1_upload.ts  2_instantiate.ts  3_proposal.ts  config.ts  package.json  types.ts
types/: package.json  tsconfig.json
types/contracts/: index.ts
types/contracts/cw3-dao/: balances_response.d.ts  config_response.d.ts  execute_msg.d.ts  index.ts  instantiate_msg.d.ts  query_msg.d.ts  shared-types.d.ts
types/contracts/dao/: ballot.d.ts  ballot.ts  config_response.d.ts  config_response.ts  deposits_response.ts  execute_msg.d.ts  execute_msg.ts  index.ts  init_msg.d.ts  init_msg.ts  proposal.d.ts  proposal.ts  proposal_response.d.ts  proposal_response.ts  proposals_response.d.ts  proposals_response.ts  query_msg.d.ts  query_msg.ts  shared-types.d.ts  shared-types.ts  token_balances_response.d.ts  token_balances_response.ts  token_list_response.d.ts  token_list_response.ts  vote_response.ts  votes_response.d.ts  votes_response.ts
types/contracts/stake/: claims_response.ts  execute_msg.d.ts  execute_msg.ts  get_config_response.d.ts  get_config_response.ts  index.ts  instantiate_msg.d.ts  instantiate_msg.ts  query_msg.ts  shared-types.d.ts  shared-types.ts  staked_balance_at_height_response.ts  staked_value_response.ts  total_staked_at_height_response.ts  total_value_response.ts
types/src/: codegen.ts
