[package]
name = "ion-stake"
version = "0.0.1"
authors = ["Ben2x4 <Ben2x4@tutanota.com>, Frostornge <hi@frostorn.ge>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/alpha-dao/ion-dao-contracts/contracts/stake"
description = "Asset that can be staked and staked balance can be queried at any height"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
osmo-bindings = { version = "0.5.1" }
cw-storage-plus = { version = "0.13" }
cw-controllers = "0.13"
cw20 = { version = "0.13" }
cw-utils = { version = "0.13" }
cw20-base = {  version = "0.13", features = ["library"] }
cw2 = "0.13"
schemars = "0.8.8"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = {  version = "0.13" }
anyhow = { version = "1.0.51"}
osmo-bindings-test = "0.5.1"